--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ div .text:hover{
     text-align: center;
 }
 .big-image{
-    height:550px;
+    height:80vh;
     margin:25px;
     border-radius: 30px;
     text-indent: -999999999px;
@@ -106,21 +106,22 @@ div .text:hover{
 }
 .big-icon{
     text-indent: -999999999px;
-    width:270px;
-    height: 300px;
+    width:min(38vh,80vw);
+    height: min(40vh,90vw);
     background-image: url("images/bigg-transparent-logo.png");
-    background-size: 270px;
+    background-size: min(38vh,80vw);
     position: relative;
     display:inline-block;
-    top:-425px;
-    margin:-180px;
+    top:-60vh;
+    margin:-20vh;
 }
 .big-name{
     font-family: 'Times New Roman', Times, serif;
     color: rgb(126, 19, 19);
-    position: relative;
-    top:-200px;
-    font-size: 70px;
+    position: absolute;
+    top:calc(60px + 55vh);
+    width: 100%;
+    font-size: 9vh;
     text-shadow: rgb(255, 122, 122) 0 0 10px;
 }
 .team{
@@ -151,13 +152,12 @@ div .text:hover{
 
 .left-image {
     text-indent: -999999999px;
-    position: absolute;
-    top:770px;
+    position: relative;
     left: 100px;
     color:white;
-    width: 250px;
-    height: 250px;
-    background-size: 430px;
+    width: min(35vh,60vw);
+    height: min(35vh,60vw);
+    background-size: 60vh;
     background-image: url("images/chi-siamo-image.jpg");
     border-radius: 50%;
 }
@@ -181,25 +181,25 @@ div .text:hover{
 .left-text{
     color: white;
     background:red;
-    padding:22px;
+    padding:3.5vh;
     border-radius: 5000px;
     width:250px;
     text-align: center;
-    position: absolute;
-    top:864px;
+    position: relative;
+    margin:-22.5vh 0;
     left: 450px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
+    font-size: 3.5vh;
 }
 .right-image {
     text-indent: -999999999px;
-    position: absolute;
-    top:970px;
-    right: 100px;
+    position: relative;
+    top:39vh;
+    left: calc(100% - 100px - min(35vh,60vw));
     color:white;
-    width: 250px;
-    height: 250px;
-    background-size: 250px;
+    width: min(35vh,60vw);
+    height: min(35vh,60vw);
+    background-size: 35vh;
     background-image: url("images/cosa-facciamo-image.jpg");
     background-position: bottom;
     border-radius: 50%;
@@ -207,34 +207,33 @@ div .text:hover{
 .right-text{
     color: white;
     background:red;
-    padding:22px;
+    padding:3.5vh;
     border-radius: 5000px;
     width:250px;
     text-align: center;
-    position: absolute;
-    top:1064px;
-    right: 450px;
+    position: relative;
+    top:16.5vh;
+    left: calc(100% - 700px);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 25px;
+    font-size: 3.5vh;
 }
 .third div{
-    top:1264px;
+    top: 30vh;
 }
 .third .image{
-    top:1170px;;
     background-image: url("images/team.jpg");
     background-size: 100%;
     background-position: center;
 }
 
 .fourth div{
-    top:1464px;
+    top: 50vh;
 }
 .fourth .image{
-    top:1370px;
     background-image: url("images/contatti-image.jpg");
     background-size: 180%;
     background-position: center;
+    top:70vh;
 }
 @media screen and (max-width:975px) {
     .left-text{
@@ -256,7 +255,7 @@ div .text:hover{
 
 .space{
     text-indent: -999999999px;
-    height: 1000px;
+    height: 80vh;
 }
 
 .socials ul{
@@ -273,9 +272,9 @@ div .text:hover{
     transition: all 0.5s;
 }
 .social a img{
-    width:150px;
-    height:150px;
-    border-radius: 40px;
+    width:min(20.5vh,30vw);
+    height:min(20.5vh,30vw);
+    border-radius: min(6.15vh,9vw);
     box-shadow: rgb(186, 186, 186) 0 0 200px;
     transition: all 1s;
 }
@@ -284,10 +283,10 @@ div .text:hover{
     box-shadow: rgb(255, 255, 255) 0 0 100px;
 }
 .logo-gmail{
-    border-radius: 40px;
+    border-radius: min(6.15vh,9vw);
     background: rgb(220, 220, 203);
-    width:150px;
-    height:150px;
+    width:min(20.5vh,30vw);
+    height:min(20.5vh,30vw);
     transition: all 0.5s;
     position: relative;
     text-decoration: none;
@@ -295,13 +294,13 @@ div .text:hover{
 .logo-gmail .text{
     text-align: center;
     position: absolute;
-    top: 61px;
-    left:175px;
+    top: min(9vh,13.5vw);
+    left:calc(min(20.5vh,30vw) + 30px);
     color: black;
 }
 .logo-gmail:hover{
     font-size: 27px;
-    width:500px;
+    width:calc(min(20.5vh,30vw) + 360px);
     transition: all 0.5s;
 }
 
