--- a/what-we-do-styles.css
+++ b/what-we-do-styles.css
@@ -62,7 +62,7 @@ header div .text{
     height: 30px;
     padding:0;
     margin:15px;
-    background-image: url("images/italian-flag.png");
+    background-image: url("/images/italian-flag.png");
     background-size: 45px;
 }
 
