--- a/what-we-do-styles.css
+++ b/what-we-do-styles.css
@@ -276,7 +276,7 @@ div .road-map-image img{
     position: absolute;
     margin:60px 0 0 0;
     left: 100px;
-    font-size: 50px;
+    font-size: 7vh;
     color:white;
 }
 
@@ -285,7 +285,7 @@ div .road-map-image img{
     flex-direction: row;
     list-style-type: none;
     flex-wrap: wrap;
-    padding: 130px 50px 60px 50px;
+    padding: calc(70px + 10vh) 50px 60px 50px;
 }
 .sponsors-logos ul li{
     color:white;
