--- a/who-we-are-styles.css
+++ b/who-we-are-styles.css
@@ -73,7 +73,7 @@ div .text:hover{
     margin:25px;
     border-radius: 30px;
     text-indent: -999999999px;
-    background-image: url("../images/top-background3.png");
+    background-image: url("images/top-background3.png");
     background-size: 100%;
     min-height: 150px;
     box-shadow: rgb(72, 60, 106) 0 100px 400px;
@@ -201,7 +201,7 @@ div .text:hover{
     position: absolute;
     margin:60px 0 0 0;
     left: 100px;
-    font-size: 50px;
+    font-size: 7vh;
     color:white;
 }
 
@@ -210,7 +210,7 @@ div .text:hover{
     flex-direction: row;
     list-style-type: none;
     flex-wrap: wrap;
-    padding: 130px 50px 60px 50px;
+    padding: calc(70px + 10vh) 50px 60px 50px;
 }
 .sponsors-logos ul li{
     color:white;
