--- a/who-we-are-styles.css
+++ b/who-we-are-styles.css
@@ -17,7 +17,7 @@ header .icon{
     width: 47px;
     height: 53px;
     margin:0 0 0 30px;
-    background-image: url("../images/bigg-transparent-logo.png");
+    background-image: url("images/bigg-transparent-logo.png");
     background-size: 47px;
     z-index: 10;
 }
@@ -60,7 +60,7 @@ div .text:hover{
     height: 30px;
     padding:0;
     margin:15px;
-    background-image: url("../images/italian-flag.png");
+    background-image: url("images/italian-flag.png");
     background-size: 45px;
 }
 
