--- a/english/contacts-styles-en.css
+++ b/english/contacts-styles-en.css
@@ -154,7 +154,7 @@ a{
     position: absolute;
     margin:60px 0 0 0;
     left: 100px;
-    font-size: 50px;
+    font-size: 7vh;
     color:white;
 }
 
@@ -163,12 +163,11 @@ a{
     flex-direction: row;
     list-style-type: none;
     flex-wrap: wrap;
-    padding: 130px 50px 60px 50px;
+    padding: calc(70px + 10vh) 50px 60px 50px;
 }
 .sponsors-logos ul li{
     color:white;
     padding:0 50px;
-    margin: 0;
 }
 .sponsors-logos ul li:first-child{
     padding: 0 50px 0 50px;
