--- a/english/contacts-styles-en.css
+++ b/english/contacts-styles-en.css
@@ -11,7 +11,7 @@ header{
     align-content: flex-start;
     gap: 0 3vw;
     padding: 0 150px 0 0;
-}
+}  
 header .icon{
     text-indent: -999999999px;
     width: 47px;
@@ -114,14 +114,13 @@ div .text:hover{
     color:white;
     margin:30px 100px;
 }
-ul li{
+.list li{
     color: white;
     margin:0 100px;
     font-size: 17px;
 }
-.inline-block{
-    display: flex;
-    flex-direction: row;
+.inline-bloc{
+    font-size: 17px;
 }
 a{
     text-decoration: none;
