--- a/team-styles.css
+++ b/team-styles.css
@@ -117,7 +117,7 @@ div .text:hover{
 
 .title {
     color: white;
-    font-size: 55px;
+    font-size: calc(2vw + 5vh);
     text-align: center;
 }
 
@@ -129,7 +129,7 @@ div .text:hover{
     box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.221);
 }
 .names li{
-    font-size: 25px;
+    font-size: calc(0.3vh + 3.5vh);
     color: white;
     display: inline-block;
     padding: 20px 50px;
