--- a/team/team-styles.css
+++ b/team/team-styles.css
@@ -127,7 +127,7 @@ div .text:hover{
     box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.221);
 }
 .names li{
-    font-size: 25px;
+    font-size: calc(1vw + 2vh);
     color: white;
     display: inline-block;
     padding: 20px 50px;
