--- a/english/team/team-styles-en.css
+++ b/english/team/team-styles-en.css
@@ -127,8 +127,7 @@ div .text:hover{
     box-shadow: 0px 20px 30px rgba(0, 0, 0, 0.221);
 }
 .names li{
-    font-size: 25px;
-    color: white;
+https://alboinoracing.github.io/alboino-racing/english/team-en.html    color: white;
     display: inline-block;
     padding: 20px 50px;
     margin:10px;
